--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "mega-menu-block",
 	"version": "0.1.0",
 	"description": "Add mega menus to your website.",
-	"author": "Nick Diego",
+	"author": "Nick Diego & DevPress",
 	"license": "GPL-2.0-or-later",
 	"main": "build/index.js",
 	"scripts": {
